--- a/app/views/pages/dotAndLine.html
+++ b/app/views/pages/dotAndLine.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./../../webroot/css/style.css">
   </head>
   <body>
-    <a href="smoke.html">煙サンプル</a>
-    <a href="dotAndLine.html">点と線</a>
   </body>
+  <script src="./../../webroot/js/vendor.bundle.js"></script>
+  <script src="./../../webroot/js/dotAndLine.bundle.js" charset="utf-8"></script>
 </html>
