パーティクル分解からの画像切り替え

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <a href="smoke.html">煙サンプル</a>
-    <a href="dotAndLine.html">点と線</a>
+    <a href="dotAndLine.html">画像切り替え</a>
   </body>
 </html>
