--- a/app/views/pages/dotAndLine.html
+++ b/app/views/pages/dotAndLine.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="./../../webroot/css/style.css">
   </head>
   <body>
+    <canvas id="c1"></canvas>
+    <canvas id="c2"></canvas>
   </body>
   <script src="./../../webroot/js/vendor.bundle.js"></script>
   <script src="./../../webroot/js/dotAndLine.bundle.js" charset="utf-8"></script>
