--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -8,5 +8,6 @@
   <body>
     <a href="smoke.html">煙サンプル</a>
     <a href="changeImage.html">画像切り替え</a>
+    <a href="dotAndLine.html">点と線</a>
   </body>
 </html>
