--- a/app/views/pages/polygon.html
+++ b/app/views/pages/polygon.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" type="text/css" href="./../../webroot/css/style.css">
   </head>
   <body>
-    <a href="smoke.html">煙サンプル</a>
-    <a href="changeImage.html">画像切り替え</a>
-    <a href="dotAndLine.html">点と線</a>
-    <a href="polygon.html">ポリゴン</a>
   </body>
+  <script src="./../../webroot/js/vendor.bundle.js"></script>
+  <script src="./../../webroot/js/polygon.bundle.js" charset="utf-8"></script>
 </html>
