--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -10,5 +10,6 @@
     <a href="changeImage.html">画像切り替え</a>
     <a href="dotAndLine.html">点と線</a>
     <a href="polygon.html">ポリゴン</a>
+    <a href="polygon2.html">ポリゴン2</a>
   </body>
 </html>
