--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -1,17 +1,19 @@
 * {
   margin: 0;
   padding: 0; }
-
-#pixi {
-  width: 600px;
-  height: 400px;
-  margin: 0 auto; }
-
-.btn {
-  display: inline-block;
-  width: 200px;
-  text-align: center;
-  margin: 20px;
-  padding: 10px;
-  border: 3px solid #000;
-  cursor: pointer; }
+#frame {
+  width: 1600px;
+  position: relative;
+  transform-origin: left top;
+}
+.bg {
+  position: absolute;
+  width: 1600px;
+  height: 900px;
+  z-index: 1;
+  background: #fed5d5;
+}
+canvas {
+  position: absolute;
+  z-index: 5;
+}
